<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/playerCreditsRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/suitStorePlayerCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playerCredits" />

            <TextView
                android:id="@+id/numCreditsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="0" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tier1and2BikeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/redBikeInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/redBikeInfo" />

            <TextView
                android:id="@+id/purpleBikeInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/purpleBikeInfo" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tier1and2BikeButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/purchaseRedBike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/purchaseButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/equipRedBike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/equipButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/purchasePurpleBike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/purchaseButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/equipPurpleBike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/equipButtonText"
                android:textSize="15sp" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tier3and4BikeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/yellowBikeInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/yellowBikeInfo" />

            <TextView
                android:id="@+id/greenBikeInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/greenBikeInfo" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tier3and4BikeButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/purchaseYellowBike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/purchaseButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/equipYellowBike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/equipButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/purchaseGeenBike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/purchaseButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/equipGreenBike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/equipButtonText"
                android:textSize="15sp" />

        </LinearLayout>

    </TableRow>

</TableLayout>
