<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/playerCreditsRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/suitStorePlayerCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playerCredits" />

            <TextView
                android:id="@+id/numCreditsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="0" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tier1and2SuitInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/blueSuitInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/blueSuitInfo" />

            <TextView
                android:id="@+id/greySuitInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:text="@string/greySuitInfo" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tier1and2SuitButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/purchaseBlueSuitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/purchaseButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/equipBlueSuitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/equipButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/purchaseGreySuitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/purchaseButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/equipGreySuitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/equipButtonText"
                android:textSize="15sp" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tier3and4SuitInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/orangeSuitInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/orangeSuitInfo" />

            <TextView
                android:id="@+id/neonSuitInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:text="@string/neonSuitInfo" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tier3and4SuitButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/purchaseOrangeSuitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/purchaseButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/equipOrangeSuitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/equipButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/purchaseNeonSuitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:paddingLeft="15dp"
                android:text="@string/purchaseButtonText"
                android:textSize="15sp" />

            <Button
                android:id="@+id/equipNeonSuitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left|center_vertical"
                android:text="@string/equipButtonText"
                android:textSize="15sp" />

        </LinearLayout>

    </TableRow>

</TableLayout>